arches/app/media/css/arches-nifty.css
/* ... */
.library-card-wide {
    width: 249px;
}
.ep-node-card {
    width: 250px;
}
.footer-tools {
    margin-top: 0;
    float: right;
}
.new-card-indent {
    width: 100%;
    transition: all .30s ease;
}
.card-library {
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    width: 100%;
}
.hide-card-library {
    width: 0px;
    transition: all .30s ease;
}
.show-card-library {
    width: 282px;
    transition: all .30s ease;
}
.data-widget-container {
    padding-top: 10px;
    padding-left: 10px;
}
.data-widget-grid-item {
    float: left;
    width: 250px;
    border: 1px solid #ddd;
    opacity: .7;
    margin: 3px;
}
.data-widget-grid-item:hover {
    cursor: move;
    opacity: 1.0;
}
.dismiss-card-library {
    position: absolute;
    right: 15px;
    top: 12px;
    color: #123;
    font-size: 17px;
}
.cc-link {
    display: inline-block;
    width: 100%;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    padding: 1px;
}
.cc-link.active {
    color: #666;
    font-weight: 600;
    background: #f8f8f8;
    border: 1px solid #ddd;
}
/*.card-link {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}
.card-link.active {
    color: #666;
    font-weight: 600;
    background: #f8f8f8;
    border: 1px solid #ddd;
}
.card-widget-link.active {
    color: #666;
    font-weight: 600;
    background: #f8f8f8;
    border: 1px solid #ddd;
}*/
.tertiary-panel {
    position: absolute;
    top: 0;
    left: 250px;
    bottom: 0;
    z-index: 50;
}
.tertiary-panel-content {
    background: #f5f5f5;
    border-right: 1px solid #ddd;
    height: 100vh;
    width: 450px;
    opacity: .95;
    padding: 10px;
}
.toggle-container {
    padding-bottom: 15px;
    padding-right: 15px;
}
.arches-toggle-sm {
    margin-left: 40px;
    margin-top: -17px;
    margin-bottom: 0;
    font-size: 12px;
}
.arches-toggle-subtitle {
    margin-left: 40px;
    display: inline-block;
    color: #8ba2b9;
    font-size: 10px;
    padding-right: 10px;
}
.note-editor .note-toolbar {
    background: #fcfcfc;
}
.note-editor .note-editable {
    background: #fff;
    color: #666;
}
.arches-admin-card-shim {
    margin-top: -60px;
}
.cardinality-form {
    padding: 7px;
}
.card-tree-list-icon {
    padding-left: 3px;
}
li.search-field {
    width: 190px;
    font-size: 11px;
}
.library-wide, .card-search-widget {
    width: 400px;
}
.library-medium, #graph-grid .library-card {
    width: 300px;
}
li.aside-li.active:hover, .library-dark .tab-content {
    background: #37495b;
}
.help-close:hover, .library-close-btn:hover, .clear-selection-link:hover, #aside .nav-tabs a i:hover, .node-note, .o-nav-library-tab i, .btn-flat:focus, .help-close:hover, #aside .nav-tabs a i:hover, .node-note, .o-nav-library-tab i, .jqtree-title.jqtree_common:hover, .btn-flat:focus, .help-close:hover, #aside .nav-tabs a i:hover, .node-note, .o-nav-library-tab i, .jqtree-title.jqtree_common:hover, .btn-flat:focus, .help-close:hover, .clear-selection-link:hover {
    color: #fff;
}
.nav-tabs.library-tools > li.active > a > i {
    color: #123;
}
.ltr, .wizard-buttons *, .ltr {
    direction: ltr;
}
.resource-grid-tools-container a:hover, .card-tree-list a:hover {
    color: #333;
}
.edit-menu-control a:hover{
    color: #666;
}
.list-group-item .selected, .card-tree-list.selected, .ep-card-crud-panel .library-title-block, .library-card.selected {
    background: #f8f8f8;
}
.library-card.selected {
    border-right: 1px solid #f8f8f8;
}

.bg-gray-dark, .bg-gray-dark a, .design a.chosen-single:hover, .design a.chosen-single:hover, .bg-gray-dark, .bg-gray-dark a {
    color: #999;
}
.btn-shim, .control-label, .control-label, .btn-shim {
    margin-bottom: 3px;
}
.grid:after, .report-image-grid:after, .report-image-grid:after, .grid:after {
    content: '';
    display: block;
    clear: both;
}
.cd-form-container > .cd-dark > div > .panel-heading > div > a, .cd-config-panel > .cd-dark > div > .panel-heading > div > a, .cd-form-container > .cd-dark > div > .panel-heading > div > a, .cd-config-panel > .cd-dark > div > .panel-heading > div > a {
    color: #ddd;
}
.arches-tab, div.tab-content.arches-tab, #aside-container #aside .tab-content, .arches-tab, div.tab-content.arches-tab, #aside-container #aside .tab-content, .arches-tab, div.tab-content.arches-tab, #aside-container #aside .tab-content {
    padding-top: 0;
}
.library-item-draggable, .drag-tool-widget .fa:hover, .edit-card-element:hover, .drag-tool-widget .fa:hover, .edit-card-element:hover, .library-item-draggable {
    cursor: move;
}
a.list-group-item:not(.active):hover, .clear-find:hover, div .switch label:hover, #demo-dt-selection tbody tr:hover, .highlight, .wizard-level-tile:hover, .editable-title:hover, .clear-find:hover, div .switch label:hover, #demo-dt-selection tbody tr:hover, .highlight, .wizard-level-tile:hover, .editable-title:hover, .clear-find:hover, div .switch label:hover, #demo-dt-selection tbody tr:hover, .highlight, .editable-card:hover, .clear-node-search:hover, .dismiss-card-library:hover {
    cursor: pointer;
}
.grid-item--width2, .columns .form-text.form-checkbox:not(.btn), .form-text.form-radio:not(.btn), .columns .form-text.form-checkbox:not(.btn), .form-text.form-radio:not(.btn), .grid-item--width2, .columns .form-text.form-checkbox:not(.btn), .form-text.form-radio:not(.btn), .grid-item--width2 {
    width: 200px;
}
.select2-search, .dropdown-shim, .dropdown-shim, .dropdown-shim {
    margin-top: 10px;
}
.relative, .slide, .relative, .slide, .relative, .slide, .relative {
    position: relative;
}
.tile-record:hover, .note-editable, .note-editable, .tile-record:hover, .note-editable, .tile-record:hover, .note-editable, .tile-record:hover, .library-tools-icon.active, .library-close-btn:hover {
    color: #123;
}
/* ... */

